--- a/index.html
+++ b/index.html
@@ -64,7 +64,13 @@
         </div>
 
 
-
+    <div class="popup" id="popup">
+        <img src="./icons/alert.png">
+        <h2>Warning!</h2>
+        <p>Title,Price,Category is Requierd<br>
+            Also the Count should be less than 100</p>
+        <button type="button" onclick="closePopup()" class="popBtn">Ok</button>
+    </div>
 
     </div>
 
